used booleans and if statements and builded simpler version of rock paper& scissors

--- a/06-booleans.html
+++ b/06-booleans.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>exercise-6</title>
+    <title>booleans</title>
   </head>
   <body>
     <script>
+    true
+    false
+
+    if (30 >= 16) {
+      console.log('you can ')
+    }
     
     </script>
   </body>
