exercises 6a & 6d solving problems on If statemets

--- a/6d.html
+++ b/6d.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>exercis-6a</title>
+    <title>exercis-6d</title>
   </head>
   <body>
   <script>
-    const hour = 14;
+    const age = 14;
 
-    const name = 'Simran';
+
 
     if (hour >=6 && hour<12){
       console.log (`Good morning ${name}!`);
