--- a/6d.html
+++ b/6d.html
@@ -5,16 +5,11 @@
   </head>
   <body>
   <script>
-    const age = 14;
-
-
-
-    if (hour >=6 && hour<12){
-      console.log (`Good morning ${name}!`);
-    } else if (hour >= 13 && hour <= 17){ 
-      console.log (`Good afternoon ${name}!`) ;
-    } else {
-      console.log (`Good night ${name}!`) ;
+    const age = 75;
+    if (age <= 6){
+      console.log('discount');
+    }else if (age >=65){
+      console.log ('discount');
     }
     </script>
   </body>
