--- a/6d.html
+++ b/6d.html
@@ -5,11 +5,13 @@
   </head>
   <body>
   <script>
-    const age = 75;
-    if (age <= 6){
-      console.log('discount');
-    }else if (age >=65){
-      console.log ('discount');
+    const age = 35;
+    const isHoliday = true ;
+
+    if ((age <= 6 || age >= 65) && !isHoliday ) {
+      console.log('disconut');
+    } else {
+      console.log ('no disconut');
     }
     </script>
   </body>
