--- a/5h.html
+++ b/5h.html
@@ -9,37 +9,50 @@
       ">Show Quantity</button>
 
     <button onclick="
-    cartQuantity ++;
-    console.log(`cart quantity :${cartQuantity}`);
-
+    if (cartQuantity + 1 > 10){
+      alert('the cart is full');
+    }else{
+      cartQuantity++;
+      console.log (`cart quantity: ${cartQuantity}`);
+    }
     ">Add to Cart</button>
 
 
     <button onclick="
-    cartQuantity += 4;
+    if (cartQuantity + 2 > 10){
+      alert('the cart is full');
+    }else{
+      cartQuantity += 2;
+    }
     console.log(`cart quantity :${cartQuantity}`);
-    ">+4</button>
+    ">+2</button>
 
 
     <button onclick="
-    cartQuantity += 5;
+     if (cartQuantity + 3 > 10){
+      alert('the cart is full');
+    }else {
+      cartQuantity += 3;
+    }
     console.log(`cart quantity :${cartQuantity}`);
-    ">+5</button>
+    ">+3</button>
 
     <button onclick="
-      cartQuantity = cartQuantity - 2;
+    cartQuantity--;
+    console.log(`cart quantity: ${cartQuantity}`);
+    ">Remove from the cart</button>
+
+    <button onclick="
+      cartQuantity -= 2;
       console.log(`cart quantity :${cartQuantity}`);
     ">-2</button>
 
     <button onclick="
-        cartQuantity = cartQuantity - 3;
+        cartQuantity -= 3;
         console.log(`cart quantity :${cartQuantity}`);
         ">-3</button>
         
-    <button onclick="
-    cartQuantity = cartQuantity - 1;
-    console.log(`cart quantity: ${cartQuantity}`);
-    ">Remove from the cart</button>
+    
 
     <button onclick=" 
     cartQuantity = 0;
