used Function for rock paper scissors game and function exercises

--- a/7b.html
+++ b/7b.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>7a</title>
+    <title>7b</title>
   </head>
   <body>
     <script>
       function greet(name){
-        console.log ('Hello!');
+        console.log (`Hello ${name}!`);
       }
 
-     greet();
-    
+     greet('simran');
+     greet('Lali');
     </script>
   </body>
 </html>
