--- a/07-functions.html
+++ b/07-functions.html
@@ -5,11 +5,18 @@
   </head>
   <body>
     <script>
+      /*
       function function1() {
         console.log('hello');
-        console.log (2+2);
+        console.log (2+2); 
       }
       function1();
+      */
+
+
+      function calcutateTax(){
+        console.log 
+      }
     </script>
   </body>
 </html>
