--- a/7h.html
+++ b/7h.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>7g</title>
+    <title>7h</title>
   </head>
   <body>
     <script>
@@ -24,15 +24,14 @@
         } else if (from === 'ft' && to === 'miles') {
           return `${length / 5280} ${to}`;
 
-          
         } else if (from === to) {
           return `${length} ${to}`;
         }
       }
   
-    console.log (convertLength (50,'miles','km'));
-    console.log (convertLength (32,'km','miles'));
-    console.log(convertLength(50, 'km', 'km'));
+    console.log (convertLength (5,'miles','km'));
+    console.log (convertLength (5,'miles','ft'));
+    console.log(convertLength(5, 'km', 'ft'));
     </script>
   </body>
 </html>
