exercises for objects

--- a/08-rock-paper-scissors.html
+++ b/08-rock-paper-scissors.html
@@ -25,7 +25,7 @@
     ">Reset Score</button>
 
     <script>
-      const score = {
+      let score = JSON.parse (localStorage.getItem(score)) || {
         wins: 0,
         losses: 0,
         ties: 0
