--- a/8c.html
+++ b/8c.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>8b</title>
+    <title>8c</title>
   </head>
   <body>
     <script>
       const product = {
         name: 'Basketball',
-        price: 2095
+        price: 2095 ,
+        'delivery-time' : '3days'
       };
       
       console.log (product); 
 
     product.price +=500;
     console.log(product);
+
+    console.log(product['delivery-time']);
     </script>
   </body>
 </html>
