--- a/calculator.html
+++ b/calculator.html
@@ -66,6 +66,9 @@
       ">.</button>
 
       <button onclick="
+       calculation = eval(calculation);
+       console.log(calculation);
+      localStorage.setItem('calculation', calculation);
       ">=</button>
 
       <button onclick="
@@ -75,16 +78,18 @@
       <button onclick="
       calculation ='';
       console.log (calculation);
+      localStorage.setItem('calculation', calculation);
       ">Clear</button>
     </p>
 
     <script>
-      let calculation ='';
+      let calculation = localStorage.getItem('calculation') || '';
 
-      function updateCalculation(value){
-        calculation +=value ;
-        console.log(calculation);
-      }
+    function updateCalculation(value) {
+      calculation += value;
+      console.log(calculation);
+      localStorage.setItem('calculation', calculation);
+    }
     </script>
   </body>
 </html>
