--- a/09-rock-paper-scissors.html
+++ b/09-rock-paper-scissors.html
@@ -16,12 +16,18 @@
     <button onclick="
       playGame('scissors');
     ">Scissors</button>
+    <p class="js-result"></p>
+    <p class="js-moves"></p>
+    <p class="js-score"></p>
+
+
 
     <button onclick="
       score.wins = 0;
       score.losses = 0;
       score.ties = 0;
       localStorage.removeItem('score');
+      updateScoreElement();
     ">Reset Score</button>
 
     <script>
@@ -31,6 +37,7 @@
         ties: 0
       };
 
+       updateScoreElement();
       
 
       function playGame(playerMove) {
@@ -76,8 +83,17 @@
 
         localStorage.setItem('score', JSON.stringify(score));
 
-        alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}
-Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
+       updateScoreElement();
+
+       document.querySelector('.js-result') .innerHTML = result;
+
+       document.querySelector ('.js-moves') . innerHTML = `You ${playerMove} - ${computerMove} Computer`; 
+
+      }
+
+      function updateScoreElement() {
+        document.querySelector('.js-score')
+          .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
       }
 
       function pickComputerMove() {
