--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -4,7 +4,7 @@
     <title>Dom</title>
   </head>
   <body>
-    
+
     <p>YouTube Subscribe Button</p>
     <button onclick="
     Subscribe();
@@ -13,12 +13,20 @@
     </button>
 
     <p>Amazon Shipping Calculator</p>
-    <input placeholder="Cost of order" class="js-cost-input">
+      <input placeholder="Cost of order" class="js-cost-input" 
+      onkeydown="
+      handleCostKeydown(event);
+    ">
 
     <button onclick="calculateTotal()">Calculate</button>
     <p class="js-total-cost"></p>
 
     <script>
+      function handleCostKeydown(event) {
+        if (event.key ==='Enter') {
+        calculateTotal();
+    }
+      }
       function calculateTotal() {
         const inputElement = document.querySelector('.js-cost-input');
         let cost = Number(inputElement.value);
@@ -27,7 +35,7 @@
           cost = cost + 10;
         }
         document.querySelector('.js-total-cost')
-      .innerHTML = `$${cost}`;
+          .innerHTML = `$${cost}`;
       }
 
      
