--- a/10-dom-projects.html
+++ b/10-dom-projects.html
@@ -3,8 +3,9 @@
   <head>
     <title>Dom</title>
     <style>
-      * {
+      body{
         font-family: Arial, Helvetica, sans-serif;
+
       }
       .subscribe-button{
         padding-left: 15px;
@@ -16,13 +17,17 @@
         border: none;
         border-radius: 20px;
         font-weight: bold;
+        margin-bottom: 30px;
+        cursor: pointer;
+      }
+      .is-subscribed{
+        background-color: rgb(240, 240, 240);
+        color: black;
+
       }
       .input-box {
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 12px;
-        padding-bottom: 12px;
-        font-size: medium;
+        padding: 10px;
+        font-size: 15px;
       }
       .calculate-button{
         padding-left: 15px;
@@ -33,6 +38,7 @@
         color: white;
         border: none;
         font-size: medium;
+        cursor: pointer;
       }
 
 
@@ -80,8 +86,10 @@
 
         if(buttonElement.innerText === 'Subscribe'){
           buttonElement.innerHTML = 'Subscribed' ;
+          buttonElement.classList.add ('is-subscribed')
         } else {
           buttonElement.innerHTML = 'Subscribe' ;
+          buttonElement.classList.remove('is-subscribed');
         }
       }
     </script>
