--- a/10g.html
+++ b/10g.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>10e</title>
-   <link rel="stylesheet" href="10e.css">
+    <title>10g</title>
+   <link rel="stylesheet" href="10g.css">
   </head>
   <body>
     <button class="toggle-button js-button" onclick="
@@ -14,7 +14,7 @@
     <button class="toggle-button js-button-3" onclick="
       toggleButton('.js-button-3');" >Tech
     </button>
-  <script src="10e.js"></script>  
+  <script src="10g.js"></script>  
   
    
   </body>
