using arrys and loops to make todo-list

--- a/10i.html
+++ b/10i.html
@@ -3,6 +3,7 @@
   <head>
     <title>10i</title>
     <link rel="stylesheet" href="10i.css">
+    
   </head>
   <body>
     <p class="js-calculation calculation"></p>
@@ -86,8 +87,6 @@
       ">Clear</button>
     </p>
 
-    <script src="10i.js">
-      
-    </script>
+    <script src="10i.js"></script>
   </body>
 </html>
